# ttsprech

./: .gitignore  README.md  flake.nix  setup.cfg  setup.py  silero-test
experimental/: coquitts.py
ttsprech/: __init__.py  __main__.py  coqui.py  coquitts.py  player.py  silero.py  tokenize.py  ttsprech.py
