[metadata]
name = ttsprech
version = 0.0.0
description = "Simple text to wav for the command line"
license = GPLv3+

[options]
packages = find:

[options.entry_points]
console_scripts =
  ttsprech = ttsprech.ttsprech:main_entrypoint

[flake8]
max-line-length = 120

[mypy]
# strict = True
warn_return_any = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unreachable = True
ignore_missing_imports = True

# EOF #
