[metadata]
name = ttsprech
version = 0.0.0
description = "Simple text to wav for the command line"
license = GPLv3+

[options]
packages = find:

[options.entry_points]
console_scripts =
  ttsprech = ttsprech.ttsprech:main_entrypoint

[flake8]
max-line-length = 120

[mypy]
# strict = True
check_untyped_defs = True

# must be False, see https://github.com/python/mypy/issues/10757
disallow_untyped_calls = False

disallow_untyped_defs = True
ignore_missing_imports = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True

[mypy-torch.*]
disallow_untyped_calls = False

[pylint]
generated-members = torch.*
disable =
  missing-module-docstring,
  missing-class-docstring,
  missing-function-docstring,
  logging-fstring-interpolation,
  unnecessary-lambda,
  too-many-arguments,
  too-many-locals,
  unspecified-encoding,
  no-else-return

[pylint.FORMAT]
max-line-length = 120

# EOF #
